fix(toggle): fix toggle switch alignment

--- a/client/src/styles/_forms.less
+++ b/client/src/styles/_forms.less
@@ -392,6 +392,7 @@
     position: relative;
     width: 32px;
     height: 16px;
+    margin: 0;
   }
   
   .toggle-switch .toggle-switch__switcher input[type='checkbox'] {
